--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "crypto-js": "^4.2.0",
-    "ws": "^8.16.0"
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/ws": "^8.5.10",
+    "@types/socket.io-client": "^3.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
