--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "irc-server": "node server/irc-server.js"
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
@@ -15,18 +14,14 @@
     "next": "15.1.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "crypto-js": "^4.2.0",
-    "ws": "^8.16.0"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/ws": "^8.5.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "@types/crypto-js": "^4.2.1"
+    "typescript": "^5"
   }
 }
