--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "next": "15.1.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.1",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/node": "^20",
