--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@auth/core": "^0.34.2",
     "@supabase/supabase-js": "^2.47.3",
-    "next": "15.1.0",
+    "next": "^15.1.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
